# DEMOEMA

./: .coverage  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .qa-audit.yaml  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Caddyfile  DESIGN.md  LICENSE  README.md  SECURITY.md  check_lamour.sql  check_silver.sql  check_silver2.sql  check_silver3.sql  deploy.sh  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  test_chat_50_journal.md  trigger_overnight.py  vercel.json
.github/: dependabot.yml
backend/: .bandit  .coverage  .dockerignore  .env.example  Dockerfile  bronze_pipeline.py  cache_shared.py  config.py  contact_pipeline.py  data_sources.py  datalake.py  demo_data.py  financials_pipeline.py  logging_config.py  main.py  mutmut_config.py  pappers_loader.py  pyproject.toml  requirements.txt  requirements_utf8.txt  sirene_bulk.py  targets_cache.json
backend/auth/: cron_secret.py  tenant.py
backend/clients/: deepseek.py  google_news.py  infogreffe.py  llm_validator.py
backend/domain/: scoring.py  validators.py
backend/migrations/: 001_sirene_index_enrich.sql  sirene_index.sql
backend/routers/: admin.py  datalake.py  graph.py  news.py  pipeline.py  scoring.py  signals.py
backend/state/: targets_store.py
backend/tests/: conftest.py  test_bodacc_config.py  test_bodacc_filters.py  test_endpoints.py  test_latentinjection_patterns.py  test_negative_endpoints.py  test_no_label_hallucination.py  test_no_pappers_leak.py  test_pappers_purge_regression.py  test_sanctions_retry.py  test_sast_config_valid.py  test_security_fixes.py  test_siren_lookup_silver.py  test_soda_config_valid.py
backend/tests/eval/: __init__.py  test_copilot_quality.py
backend/tests/properties/: test_data_sources_extra_invariants.py  test_datalake_extra_invariants.py  test_datalake_whitelist_invariants.py  test_deepseek_endpoint_invariants.py  test_demo_data_extra_invariants.py  test_prompt_injection_invariants.py  test_safe_wrapper_invariants.py  test_scoring_invariants.py  test_signal_catalog_invariants.py  test_validators_invariants.py
docs/: AI_ACT_COMPLIANCE.md  ARCHITECTURE_DATA.md  ARCHITECTURE_DATA_V2.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_TECHNIQUE.md  BROCHURE_COMMERCIALE.md  BUDGET_EQUIPE.md  CARTOGRAPHIE_DONNEES.md  CATALOGUE_SOURCES.md  CHALLENGE_QUESTIONS.md  CLAUDE_DESIGN_PROMPT.md  CLEANUP_LOG.md  COMPETITIVE_FEATURES.md  CONCURRENCE.md  DATACATALOG.md  DATACATALOG_LINEAGE.md  DECISIONS.md  DECISIONS_VALIDEES.md  DEPLOYMENT_RUNBOOK.md  DEPLOY_LOG.md  ETAT_REEL_2026-04-17.md  ETAT_REEL_2026-04-19.md  ETAT_REEL_2026-04-20.md  ETAT_REEL_2026-04-28.md  ETAT_REEL_2026-04-30.md  ETAT_REEL_2026-05-01.md  FINANCES_UNIFIE.md  INCIDENTS.md  INGESTION_AGENTS.md  KIT_ACTION_30JOURS.md  L1-DIFF-MATRIX.md  LINEAGE_DONNEES.md  (+32 more)
(+433 files in other folders)
